JCGO v1.02 sources import excluding README (2010-12-04).