@@ -6,7 +6,8 @@
  */
 
 /* DecimalFormat.java -- Formats and parses numbers
-   Copyright (C) 1999, 2000, 2001, 2003, 2004, 2005  Free Software Foundation, Inc.
+   Copyright (C) 1999, 2000, 2001, 2003, 2004, 2005, 2010
+   Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -78,7 +79,7 @@ import java.util.Locale;
  * Generally, to get an instance of DecimalFormat you should call the factory
  * methods in the <code>NumberFormat</code> base class.
  *
- * @author Mario Torre <neugens@limasoftware.net>
+ * @author Mario Torre (neugens@limasoftware.net)
  * @author Tom Tromey (tromey@cygnus.com)
  * @author Andrew John Hughes (gnu_andrew@member.fsf.org)
  */
@@ -152,7 +153,7 @@ public class DecimalFormat extends NumberFormat
 
   /**
    * This is an internal parameter used to keep track of the number
-   * of digits the form the exponent, when exponential notation is used.
+   * of digits that form the exponent, when exponential notation is used.
    * It is used with <code>exponentRound</code>
    */
   private byte minExponentDigits;
@@ -197,7 +198,7 @@ public class DecimalFormat extends NumberFormat
   private boolean hasFractionalPattern;
 
   /** Stores a list of attributes for use by formatToCharacterIterator. */
-  private ArrayList attributes = new ArrayList();
+  private final ArrayList attributes = new ArrayList();
 
   /**
    * Constructs a <code>DecimalFormat</code> which uses the default
@@ -332,7 +333,7 @@ public class DecimalFormat extends NumberFormat
    * field. If used on output defines the offsets of the alignment field.
    * @return The String representation of this long.
    */
-  public StringBuffer format(Object obj, StringBuffer sbuf, FieldPosition pos)
+  public final StringBuffer format(Object obj, StringBuffer sbuf, FieldPosition pos)
   {
     if (obj instanceof BigInteger)
       {
@@ -461,8 +462,8 @@ public class DecimalFormat extends NumberFormat
         FieldPosition pos = (FieldPosition) attributes.get(i);
         Format.Field attribute = pos.getFieldAttribute();
 
-        as.addAttribute(attribute, attribute, pos.getBeginIndex(), pos
-                        .getEndIndex());
+        as.addAttribute(attribute, attribute, pos.getBeginIndex(),
+                        pos.getEndIndex());
       }
 
     // return the CharacterIterator from AttributedString
@@ -604,19 +605,19 @@ public class DecimalFormat extends NumberFormat
    */
   public Number parse(String str, ParsePosition pos)
   {
+    // starting parsing position
+    int start = pos.getIndex();
+
     // a special values before anything else
     // NaN
-    if (str.contains(this.symbols.getNaN()))
-      return Double.valueOf(Double.NaN);
-
-    // this will be our final number
-    StringBuffer number = new StringBuffer();
+    if (str.startsWith(symbols.getNaN(), start))
+      {
+        pos.setIndex(start + symbols.getNaN().length()); // adjust pos
+        return Double.valueOf(Double.NaN);
+      }
 
     // special character
     char minus = symbols.getMinusSign();
-
-    // starting parsing position
-    int start = pos.getIndex();
 
     // validate the string, it have to be in the
     // same form as the format string or parsing will fail
@@ -626,43 +627,52 @@ public class DecimalFormat extends NumberFormat
 
     // we check both prefixes, because one might be empty.
     // We want to pick the longest prefix that matches.
-    int positiveLen = positivePrefix.length();
-    int negativeLen = _negativePrefix.length();
-
-    boolean isNegative = str.startsWith(_negativePrefix);
-    boolean isPositive = str.startsWith(positivePrefix);
-
-    if (isPositive && isNegative)
+    boolean isNegative = str.startsWith(_negativePrefix, start);
+    if (str.startsWith(positivePrefix, start))
       {
-        // By checking this way, we preserve ambiguity in the case
-        // where the negative format differs only in suffix.
-        if (negativeLen > positiveLen)
+        int positiveLen = positivePrefix.length();
+        if (isNegative)
           {
-            start += _negativePrefix.length();
-            isNegative = true;
+            // By checking this way, we preserve ambiguity in the case
+            // where the negative format differs only in suffix.
+            int negativeLen = _negativePrefix.length();
+            if (negativeLen < positiveLen)
+              {
+                isNegative = false;
+                start += positiveLen;
+              }
+            else
+              start += negativeLen;
           }
         else
-          {
-            start += positivePrefix.length();
-            isPositive = true;
-            if (negativeLen < positiveLen)
-              isNegative = false;
-          }
+          start += positiveLen;
       }
     else if (isNegative)
       {
         start += _negativePrefix.length();
-        isPositive = false;
-      }
-    else if (isPositive)
-      {
-        start += positivePrefix.length();
-        isNegative = false;
       }
     else
       {
         pos.setErrorIndex(start);
         return null;
+      }
+
+    // 2nd special case: infinity
+    if (str.startsWith(symbols.getInfinity(), start))
+      {
+        pos.setIndex(start + symbols.getInfinity().length());
+
+        // FIXME: ouch, this is really ugly and lazy code...
+        if (this.parseBigDecimal)
+          {
+            if (isNegative)
+              return BigDecimal.valueOf(Double.NEGATIVE_INFINITY);
+            return BigDecimal.valueOf(Double.POSITIVE_INFINITY);
+          }
+
+        if (isNegative)
+          return Double.valueOf(Double.NEGATIVE_INFINITY);
+        return Double.valueOf(Double.POSITIVE_INFINITY);
       }
 
     // other special characters used by the parser
@@ -671,26 +681,29 @@ public class DecimalFormat extends NumberFormat
     char exponent = symbols.getExponential();
 
     // stop parsing position in the string
-    int stop = start + this.maximumIntegerDigits + maximumFractionDigits + 2;
-
+    int stop = start + maximumIntegerDigits;
+    if (maximumFractionDigits > 0)
+      stop += maximumFractionDigits + 1;
     if (useExponentialNotation)
-      stop += minExponentDigits + 1;
+      stop += (minExponentDigits > 0 ? minExponentDigits : 1) + 2;
 
     boolean inExponent = false;
 
     // correct the size of the end parsing flag
     int len = str.length();
     if (len < stop) stop = len;
+    char groupingSeparator = symbols.getGroupingSeparator();
 
-    int i = start;
-    while (i < stop)
+    // this will be our final number
+    StringBuilder number = new StringBuilder();
+
+    int i;
+    for (i = start; i < stop; i++)
       {
         char ch = str.charAt(i);
-        i++;
-
         if (ch >= zero && ch <= (zero + 9))
           {
-            number.append(ch);
+            number.append((char)(ch - (zero - '0')));
           }
         else if (this.parseIntegerOnly)
           {
@@ -700,44 +713,32 @@ public class DecimalFormat extends NumberFormat
           {
             number.append('.');
           }
-        else if (ch == exponent)
+        else if (ch == exponent && !inExponent && useExponentialNotation)
           {
-            number.append(ch);
-            inExponent = !inExponent;
+            number.append('e');
+            inExponent = true;
           }
-        else if ((ch == '+' || ch == '-' || ch == minus))
+        else if (ch == '+' || ch == '-' || ch == minus)
           {
             if (inExponent)
-              number.append(ch);
+              {
+                if (ch != '+')
+                  number.append('-');
+              }
             else
+              {
+                break;
+              }
+          }
+        else
+          {
+            if (!groupingUsed || ch != groupingSeparator)
               break;
           }
       }
 
-    // 2nd special case: infinity
-    // XXX: need to be tested
-    if (str.contains(symbols.getInfinity()))
-      {
-        int inf = str.indexOf(symbols.getInfinity());
-        pos.setIndex(inf);
-
-        // FIXME: ouch, this is really ugly and lazy code...
-        if (this.parseBigDecimal)
-          {
-            if (isNegative)
-              return new BigDecimal(Double.NEGATIVE_INFINITY);
-
-            return new BigDecimal(Double.POSITIVE_INFINITY);
-          }
-
-        if (isNegative)
-          return new Double(Double.NEGATIVE_INFINITY);
-
-        return new Double(Double.POSITIVE_INFINITY);
-      }
-
     // no number...
-    if (i == start || number.length() == 0)
+    if (number.length() == 0)
       {
         pos.setErrorIndex(i);
         return null;
@@ -745,25 +746,21 @@ public class DecimalFormat extends NumberFormat
 
     // now we have to check the suffix, done here after number parsing
     // or the index will not be updated correctly...
-    boolean isNegativeSuffix = str.endsWith(this.negativeSuffix);
-    boolean isPositiveSuffix = str.endsWith(this.positiveSuffix);
-    boolean positiveEqualsNegative = negativeSuffix.equals(positiveSuffix);
-
-    positiveLen = positiveSuffix.length();
-    negativeLen = negativeSuffix.length();
-
-    if (isNegative && !isNegativeSuffix)
+    int positiveLen = positiveSuffix.length();
+    int negativeLen = negativeSuffix.length();
+    boolean hasNegativeSuffix = str.regionMatches(i, negativeSuffix, 0,
+                                                  negativeLen);
+    if (isNegative && !hasNegativeSuffix)
       {
         pos.setErrorIndex(i);
         return null;
       }
-    else if (isNegativeSuffix &&
-             !positiveEqualsNegative &&
-             (negativeLen > positiveLen))
+    else if (hasNegativeSuffix && negativeLen > positiveLen
+             && !negativeSuffix.equals(positiveSuffix))
       {
         isNegative = true;
       }
-    else if (!isPositiveSuffix)
+    else if (!str.regionMatches(i, positiveSuffix, 0, positiveLen))
       {
         pos.setErrorIndex(i);
         return null;
@@ -771,7 +768,7 @@ public class DecimalFormat extends NumberFormat
 
     if (isNegative) number.insert(0, '-');
 
-    pos.setIndex(i - 1);
+    pos.setIndex(i + (isNegative ? negativeLen : positiveLen));
 
     // now we handle the return type
     BigDecimal bigDecimal = new BigDecimal(number.toString());
@@ -780,21 +777,21 @@ public class DecimalFormat extends NumberFormat
 
     // want integer?
     if (this.parseIntegerOnly)
-      return new Long(bigDecimal.longValue());
+      return Long.valueOf(bigDecimal.longValue());
 
     // 3th special case -0.0
     if (isNegative && (bigDecimal.compareTo(BigDecimal.ZERO) == 0))
-      return new Double(-0.0);
+      return Double.valueOf(-0.0);
 
     try
       {
         BigDecimal integer
           = bigDecimal.setScale(0, BigDecimal.ROUND_UNNECESSARY);
-        return new Long(integer.longValue());
+        return Long.valueOf(integer.longValue());
       }
     catch (ArithmeticException e)
       {
-        return new Double(bigDecimal.doubleValue());
+        return Double.valueOf(bigDecimal.doubleValue());
       }
   }
 
@@ -808,7 +805,30 @@ public class DecimalFormat extends NumberFormat
    */
   public void setCurrency(Currency currency)
   {
-    symbols.setCurrency(currency);
+    Currency current = symbols.getCurrency();
+    if (current != currency)
+      {
+        String oldSymbol = symbols.getCurrencySymbol();
+        int len = oldSymbol.length();
+        symbols.setCurrency(currency);
+        String newSymbol = symbols.getCurrencySymbol();
+        int posPre = positivePrefix.indexOf(oldSymbol);
+        if (posPre != -1)
+          positivePrefix = positivePrefix.substring(0, posPre) +
+            newSymbol + positivePrefix.substring(posPre+len);
+        int negPre = negativePrefix.indexOf(oldSymbol);
+        if (negPre != -1)
+          negativePrefix = negativePrefix.substring(0, negPre) +
+            newSymbol + negativePrefix.substring(negPre+len);
+        int posSuf = positiveSuffix.indexOf(oldSymbol);
+        if (posSuf != -1)
+          positiveSuffix = positiveSuffix.substring(0, posSuf) +
+            newSymbol + positiveSuffix.substring(posSuf+len);
+        int negSuf = negativeSuffix.indexOf(oldSymbol);
+        if (negSuf != -1)
+          negativeSuffix = negativeSuffix.substring(0, negSuf) +
+            newSymbol + negativeSuffix.substring(negSuf+len);
+      }
   }
 
   /**
@@ -996,7 +1016,7 @@ public class DecimalFormat extends NumberFormat
    * @return <code>true</code> if the strings are both <code>null</code> or
    * equals.
    */
-  private boolean equals(String s1, String s2)
+  private static boolean equals(String s1, String s2)
   {
     if (s1 == null || s2 == null)
       return s1 == s2;
@@ -1010,9 +1030,9 @@ public class DecimalFormat extends NumberFormat
    * This helper function creates a string consisting of all the
    * characters which can appear in a pattern and must be quoted.
    */
-  private String patternChars (DecimalFormatSymbols syms)
+  private static String patternChars (DecimalFormatSymbols syms)
   {
-    StringBuffer buf = new StringBuffer ();
+    StringBuilder buf = new StringBuilder ();
 
     buf.append(syms.getDecimalSeparator());
     buf.append(syms.getDigit());
@@ -1037,9 +1057,9 @@ public class DecimalFormat extends NumberFormat
    * @param patChars
    * @return A StringBuffer with special characters quoted.
    */
-  private StringBuffer quoteFix(String text, String patChars)
+  private static StringBuilder quoteFix(String text, String patChars)
   {
-    StringBuffer buf = new StringBuffer();
+    StringBuilder buf = new StringBuilder();
 
     int len = text.length();
     char ch;
@@ -1067,7 +1087,7 @@ public class DecimalFormat extends NumberFormat
    */
   private String computePattern(DecimalFormatSymbols symbols)
   {
-    StringBuffer mainPattern = new StringBuffer();
+    StringBuilder mainPattern = new StringBuilder();
 
     // We have to at least emit a zero for the minimum number of
     // digits. Past that we need hash marks up to the grouping
@@ -1234,7 +1254,7 @@ public class DecimalFormat extends NumberFormat
   private int scanFix(String pattern, DecimalFormatSymbols sourceSymbols,
                       int start, boolean prefix)
   {
-    StringBuffer buffer = new StringBuffer();
+    StringBuilder buffer = new StringBuilder();
 
     // the number portion is always delimited by one of those
     // characters
@@ -1305,7 +1325,7 @@ public class DecimalFormat extends NumberFormat
             currencySymbol = this.symbols.getCurrencySymbol();
 
             // if \u00A4 is doubled, we use the international currency symbol
-            if (i < len && pattern.charAt(i + 1) == '\u00A4')
+            if ((i + 1) < len && pattern.charAt(i + 1) == '\u00A4')
               {
                 currencySymbol = this.symbols.getInternationalCurrencySymbol();
                 i++;
@@ -1329,7 +1349,7 @@ public class DecimalFormat extends NumberFormat
         else if (ch == '\'')
           {
             // QUOTE
-            if (i < len && pattern.charAt(i + 1) == '\'')
+            if ((i + 1) < len && pattern.charAt(i + 1) == '\'')
               {
                 // we need to add ' to the buffer
                 buffer.append(ch);
@@ -1608,7 +1628,7 @@ public class DecimalFormat extends NumberFormat
                                    DecimalFormatSymbols sourceSymbols,
                                    int start)
   {
-    StringBuffer buffer = new StringBuffer();
+    StringBuilder buffer = new StringBuilder();
 
     // the number portion is always delimited by one of those
     // characters
@@ -1701,7 +1721,7 @@ public class DecimalFormat extends NumberFormat
         else if (ch == '\'')
           {
             // QUOTE
-            if (i < len && pattern.charAt(i + 1) == '\'')
+            if ((i + 1) < len && pattern.charAt(i + 1) == '\'')
               {
                 // we need to add ' to the buffer
                 buffer.append(ch);
@@ -1796,7 +1816,7 @@ public class DecimalFormat extends NumberFormat
     int endIndexFract = 0;
 
     // compute the multiplier to use with percent and similar
-    number = number.multiply(new BigDecimal(_multiplier));
+    number = number.multiply(BigDecimal.valueOf(_multiplier));
 
     // XXX: special case, not sure if it belongs here or if it is
     // correct at all. There may be other special cases as well
@@ -2189,7 +2209,7 @@ public class DecimalFormat extends NumberFormat
     else
       {
         char zero = symbols.getZeroDigit();
-        StringBuffer _result = new StringBuffer(src);
+        StringBuilder _result = new StringBuilder(src);
         for (int i = len; i < minimumDigits; i++)
           {
             _result.append(zero);
